Use price information to calculate the balance over all transactions shown for a payee in the payees view.

Backported to stable branch.

BUG: 284122


svn path=/branches/stable/extragear-kde4/office/kmymoney/; revision=1260150